--- a/install.yaml
+++ b/install.yaml
@@ -1,6 +1,12 @@
-name: mtk
+name: DDEV MTK
 
 project_files:
   - docker-compose.mtk.yaml
+  - commands/host/pulldb
+  - commands/host/sequelace
+  - commands/host/tableplus
+  - web-build/Dockerfile.mtk
+  - settings.ddev-mtk.php
+  - .env.mtk.web
 
 ddev_version_constraint: '>= v1.24.3'
